# astra-toolbox

./: CMakeLists.txt  NEWS.txt
.github/workflows/: build-matlab-macos.yml
include/astra/: Data3D.h
python/: builder.py  pyproject.toml  setup.py
python/astra/src/: dlpack.cpp
samples/python/: s008_gpu_selection.py  s019_experimental_multires.py  s023_FBP_filters.py
src/: CMakeLists.txt  Data3D.cpp
tests/: CMakeLists.txt
tests/python/integration/: conftest.py  test_dlpack.py
